...
                                    <constraint firstAttribute="width" constant="60" id="r9E-lQ-HeV"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MtG-Y4-DBg">
                                <rect key="frame" x="16" y="529" width="343" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="YL6-nU-FPL"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
                                                <constraint firstItem="Ajp-3v-3eF" firstAttribute="trailing" secondItem="CK2-bR-LdU" secondAttribute="trailing" id="rq3-dO-gmG"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <connections>
                                            <outlet property="cellPicture" destination="CK2-bR-LdU" id="6Y2-xo-byy"/>
                                            <outlet property="dateLabel" destination="aBD-Kk-tjY" id="3lh-k5-ZRP"/>
                                            <outlet property="likeButton" destination="Ajp-3v-3eF" id="A7A-xh-eLd"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
...
                                <rect key="frame" x="9" y="11" width="24" height="24"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="dx8-Pb-bBf"/>
                                    <constraint firstAttribute="width" constant="24" id="sgs-PT-R21"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="backwardButton"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="AeH-D5-uUW" eventType="touchUpInside" id="p7g-pW-zfn"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2GP-Yo-7Pa" userLabel="Share Button">
                                <rect key="frame" x="150" y="585" width="75" height="65"/>
...
