...
//    MARK: - Private methods
    
    @objc 
    private func logoutButtonDidTap() {
        let alertPresenter = AlertPresenter(delegate: self)
        let alertData = AlertModel(
            title: "Пока, пока!",
            text: "Уверены, что хотите выйти?",
            firstAction: .init(actionText: "Да",
                               actionCompletion: { [weak self] _ in
                        guard let self else { return }
                        alertPresenter.dismissAlert()
                        presenter?.logout()
                    }),
            secondAction: .init(actionText: "Нет",
...
